@@ -7,7 +7,11 @@ TODO: document WSA_EV_USE_SOCKET in win32 part
 TODO: ^ OR use WSASend/WSARecv on the handle, which always works
 TODO: use __OPTIMIZE__ or __OPTIMIZE_SIZE__?
 
-TODO: Jeff Davey libev patch
+	- fix event_base_loop return code, add event_get_callback, event_base_new,
+          event_base_get_method calls to improve libevent 1.x emulation and add
+          some libevent 2.x funcitonality (based on a patch by Jeff Davey).
+	- ev_run now returns a boolean status (true meaning watchers are
+          still active).
 	- ev_once: undef EV_ERROR in ev_kqueue.c, to avoid clashing with
           libev's EV_ERROR (reported by 191919).
 	- (ecb) add memory fence support for xlC (Darin McBride).
